# sagemaker_mlops_demo

./: .gitignore  .gitmodules  LICENSE  README.md  README_en.md
.circleci/: awscli_setting.sh  config.yml
custom_algorithms/kaggle_titanic/logistic_regression/container/: Dockerfile  build_and_push.sh  entrypoint.sh  pyproject.toml
custom_algorithms/kaggle_titanic/logistic_regression/container/api/: nginx.conf  predictor.py  serve  train  wsgi.py
custom_algorithms/kaggle_titanic/logistic_regression/container/api/apps/: config_manager.py  exceptions.py  model.py  numpy_encoder.py  preprocessing.py  s3_updown.py  scoring_service.py  trainer.py  utils.py
custom_algorithms/kaggle_titanic/logistic_regression/container/api/apps/config_outputs/: cicdtest_2020-02-04-15-56-45-470714.json  cicdtest_2020-02-04-15-57-08-839777.json  cicdtest_2020-02-04-15-57-19-990365.json  cicdtest_2020-02-04-15-57-33-359740.json  hoge.json  sample.json  sample2.json  sample_2020-02-03-14-11-34-265815.json  sample_2020-02-03-14-14-03-764147.json  sample_2020-02-03-14-16-38-916291.json
custom_algorithms/kaggle_titanic/logistic_regression/container/api/apps/experiments/: README.md  titanic_sklearn_logistic_regression_sample_experiment.ipynb
custom_algorithms/kaggle_titanic/logistic_regression/container/api/apps/tests/: conftest.py  test_config_manager.py  test_model.py  test_preprocessing.py  test_scoring_service.py  test_trainer.py  test_utils.py
custom_algorithms/kaggle_titanic/logistic_regression/container/tests/: entrypoint.sh  test_local_api.py  test_local_api.sh
(+18 files in other folders)
